# BigOYouBackend

./: DOCKER_SETUP.md  Dockerfile  README.md  docker-compose.yml  example.env  feedback.json  main.py  pyproject.toml
helpers/: auth_deps.py  gen_JWT_token.py  get_session_data.py  pass_hash.py  populate_sesson_metrics.py  problem_reference_seed.py  problems.json  problems_reference.json  problems_seed.py  redis_client.py
modules/: auth.py  db.py  execute_code.py  interview.py  interview_agent.py  problems.py
services/ai_agent/: agent.py  model.py  system_prompt.py  tools.py
services/code_runner/: docker_runner.py  job_schema.py  worker.py
services/code_runner/images/cpp/: Dockerfile
services/code_runner/images/java/: Dockerfile
services/code_runner/images/python/: Dockerfile
