[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "langgraph>=0.2.0",
    "langchain>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "neon-api>=0.3.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.31",
    "uvicorn[standard]>=0.40.0",
    "langchain-groq>=1.1.1",
    "rq>=2.6.1",
    "docker>=7.1.0",
    "langgraph-checkpoint-postgres>=3.0.4",
]
